# thegoodwand

./: .gitignore  .gitmodules  README.md  config.txt  system.sh
hardware/: FishWand_wandPCB.RUL
hardware/FishWand/: 00 - TitlePage.SchDoc  01 - rpiInterface.SchDoc  02 - Power.SchDoc  03 - IMU.SchDoc  04 - Audio.SchDoc  05-usb-Debugger.SchDoc  06- NFC.SchDoc  CoverPage.SchDoc  FishWand.OutJob  FishWand.PrjPcb  FishWand.PrjPcbStructure  FishWand.PrjPcbVariants  FishWand_Schlib.SchLib  FishWand_pcbLib.PcbLib
hardware/FishWandTip/: FishWand.OutJob  led-pcba-220802.dxf
libraries/seeed-voicecard/: README.md
services/: README.md
services/audio/: .gitignore  FWAudioService.py  FWAudioService.pyb  FWOldAudioService.py  FWWorks.py  playsnd.py  pplay.py  pub_client.py  tplay.sh
services/backend/: TGWBackend.py  register.py
services/battery_charger/: bq24296M.py  charger.py  charger_cli.py  charger_service.py  stats.sh  (+1 more)
services/lights/: CMakeLists.txt  FWBlink.py  FWCSV.py  FWLightAnimation.py  FWLightService.py  FWLights.py  FWRainbowAnimation.py  README.md  WS2812Service.cpp  WS2812Service.hpp  callback.hpp  confused_not_understood.csv  constants.py  csv.h  demo.py  green_up_down.csv  install.sh  main.cpp  main.py  no_failed.csv  pub_client.py  pub_client.py.save  pub_client_indicator.py  test.csv  test.py  yes_confirmed.csv
services/lights/assets/: junk.csv  no_failed.csv  select.csv  yipee.csv
setup/: README.md  boot_config.sh  build_lights.sh  daemons.sh  edge_impulse.sh  install_all.sh  vlc.sh
spells/: README.md
templates/: MQTTObject.py  README.md  Services.py  log.py  tgw_timer.py
(+189 files in other folders)
